[tool.poetry]
name = "google-fin"
version = "0.1.0"
description = ""
authors = ["eo1989 <eorlowski6@gmail.com>"]
readme = "README.md"
packages = [{include = "google_fin"}]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = {version = "^2.8.0", python = "3.10"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
